--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "devDependencies": {
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.4.5"
   }
 }
