--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.394.0",
         "next": "^14.2.4",
+        "next-auth": "^5.0.0-beta.19",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
