--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@auth/core": "^0.32.0",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -16,6 +17,7 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
         "@tanstack/react-table": "^8.17.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -31,6 +33,7 @@
     "devDependencies": {
         "@types/node": "20.14.2",
         "@types/react": "18.3.3",
+        "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.19",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.4",
