--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,13 @@
             "@/lib/*": ["lib/*"]
         }
     },
-    "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        ".next/types/**/*.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "next.config.js",
+        "next.config.js"
+    ],
     "exclude": ["node_modules"]
 }
