--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "plugins": [
             {
                 "name": "next"
@@ -21,7 +23,8 @@
         "paths": {
             "@/app/*": ["app/*"],
             "@/components/*": ["components/*"],
-            "@/lib/*": ["lib/*"]
+            "@/lib/*": ["lib/*"],
+            "@/types/*": ["types/*"]
         }
     },
     "include": [
